force-app/main/default/objects/Opportunity/fields/Ap_licaci_n_ndice__c.field-meta.xml
<CustomField>
    <fullName>Ap_licaci_n_ndice__c</fullName>
    <label>Aplicación índice</label>
    <type>Phone</type>
</CustomField>