force-app/main/default/objects/Opportunity/fields/Aplicaci_n_divisa__c.field-meta.xml
<CustomField>
    <fullName>Aplicaci_n_divisa__c</fullName>
    <label>Aplicación divisa</label>
    <type>Phone</type>
</CustomField>