force-app/main/default/objects/Opportunity/fields/C_d_cotizaci_n__c.field-meta.xml
<CustomField>
    <fullName>C_d_cotizaci_n__c</fullName>
    <label>Cód. cotización</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>APLIFUN</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>BOE</fullName>
            </value>
            <value>
                <fullName>BP</fullName>
            </value>
            <value>
                <fullName>BP + SH</fullName>
            </value>
            <value>
                <fullName>CAN  UF</fullName>
            </value>
            <value>
                <fullName>CAN UF -1</fullName>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>CIF BIO</fullName>
            </value>
            <value>
                <fullName>CP</fullName>
            </value>
            <value>
                <fullName>DIGAL</fullName>
            </value>
            <value>
                <fullName>FASA</fullName>
            </value>
            <value>
                <fullName>FUND. FATI</fullName>
            </value>
            <value>
                <fullName>MIX SH CIF</fullName>
            </value>
            <value>
                <fullName>PIP AMBES</fullName>
            </value>
            <value>
                <fullName>PIP GIJON</fullName>
            </value>
            <value>
                <fullName>PIP LABENN</fullName>
            </value>
            <value>
                <fullName>PIP MED</fullName>
            </value>
            <value>
                <fullName>PIP SANTUR</fullName>
            </value>
            <value>
                <fullName>PIP TARRAG</fullName>
            </value>
            <value>
                <fullName>SH</fullName>
            </value>
            <value>
                <fullName>FOB SG</fullName>
            </value>
            <value>
                <fullName>CIF C3</fullName>
            </value>
            <value>
                <fullName>BRENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>