force-app/main/default/objects/Opportunity/fields/C_d_Unidad_de_medida__c.field-meta.xml
<CustomField>
    <fullName>C_d_Unidad_de_medida__c</fullName>
    <label>Cód. Unidad de medida</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>KG</fullName>
                <default>true</default>
                <label>KG</label>
            </value>
            <value>
                <fullName>TN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>