force-app/main/default/objects/Opportunity/fields/C_d_Variante__c.field-meta.xml
<CustomField>
    <fullName>C_d_Variante__c</fullName>
    <label>Cód. Variante</label>
    <length>50</length>
    <type>Text</type>
</CustomField>