force-app/main/default/objects/Opportunity/fields/C_d_Zona__c.field-meta.xml
<CustomField>
    <fullName>C_d_Zona__c</fullName>
    <label>Cód. Zona</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ANDORRA</fullName>
            </value>
            <value>
                <fullName>CANTALEJO</fullName>
            </value>
            <value>
                <fullName>CASTELLON</fullName>
            </value>
            <value>
                <fullName>CENTRO</fullName>
            </value>
            <value>
                <fullName>ESTE</fullName>
            </value>
            <value>
                <fullName>NORTE</fullName>
            </value>
            <value>
                <fullName>PORTUGAL</fullName>
            </value>
            <value>
                <fullName>QUINTO</fullName>
            </value>
            <value>
                <fullName>SEDE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>