force-app/main/default/objects/Opportunity/fields/Cantidad_m_nima__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_m_nima__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cantidad mínima</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>