force-app/main/default/objects/Opportunity/fields/Capacidad_deposito__c.field-meta.xml
<CustomField>
    <fullName>Capacidad_deposito__c</fullName>
    <label>Capacidad depósito</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>