force-app/main/default/objects/Opportunity/fields/Cliente_propietario_del_tanque__c.field-meta.xml
<CustomField>
    <fullName>Cliente_propietario_del_tanque__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente propietario del tanque</label>
    <type>Checkbox</type>
</CustomField>