force-app/main/default/objects/Opportunity/fields/Comentario_Delegado__c.field-meta.xml
<CustomField>
    <fullName>Comentario_Delegado__c</fullName>
    <label>Comentario Delegado</label>
    <type>TextArea</type>
</CustomField>