force-app/main/default/objects/Opportunity/fields/Consumo_energia_1a_estimacion__c.field-meta.xml
<CustomField>
    <fullName>Consumo_energia_1a_estimacion__c</fullName>
    <description>Se recogerá del valor indicado en el candidato en la conversión.</description>
    <label>Consumo energía 1a estimación</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>