force-app/main/default/objects/Opportunity/fields/Consumo_energia_ofertada__c.field-meta.xml
<CustomField>
    <fullName>Consumo_energia_ofertada__c</fullName>
    <description>Recoge el valor máximo del campo &quot;Consumo contratado kg&quot; de entre todos sus presupuestos asociados.</description>
    <label>Consumo energía ofertada</label>
    <summarizedField>Quote.Kg__c</summarizedField>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>