force-app/main/default/objects/Opportunity/fields/Contrato__c.field-meta.xml
<CustomField>
    <fullName>Contrato__c</fullName>
    <formula>IF(ISBLANK(SyncedQuote.Id), &apos;-&apos;, &apos;https://eu1.salesforce.com/&apos; &amp; SyncedQuote.Id)</formula>
    <label>Contrato</label>
    <type>Text</type>
</CustomField>