force-app/main/default/objects/Opportunity/fields/Contrato_Base__c.field-meta.xml
<CustomField>
    <fullName>Contrato_Base__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contrato Base</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>El cliente del contrato debe ser el mismo que el de la venta actual</errorMessage>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Quote.Opportunity.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Ampliaciones</relationshipLabel>
    <relationshipName>Ampliaciones</relationshipName>
    <type>Lookup</type>
</CustomField>