force-app/main/default/objects/Opportunity/fields/Coste_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Coste_Comercial__c</fullName>
    <label>Coste Comercial</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>