force-app/main/default/objects/Opportunity/fields/Coste_Posicionamiento__c.field-meta.xml
<CustomField>
    <fullName>Coste_Posicionamiento__c</fullName>
    <label>Coste Posicionamiento</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>