force-app/main/default/objects/Opportunity/fields/Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Currency_Code__c</fullName>
    <label>Currency Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>