force-app/main/default/objects/Opportunity/fields/Date_Quoted__c.field-meta.xml
<CustomField>
    <fullName>Date_Quoted__c</fullName>
    <label>Date Quoted</label>
    <type>Date</type>
</CustomField>