force-app/main/default/objects/Opportunity/fields/Dias_en_pasar_a_estado_Negociacion__c.field-meta.xml
<CustomField>
    <fullName>Dias_en_pasar_a_estado_Negociacion__c</fullName>
    <label>Días en pasar a estado &quot;Negociación&quot;</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>