force-app/main/default/objects/Opportunity/fields/Dimension1__c.field-meta.xml
<CustomField>
    <fullName>Dimension1__c</fullName>
    <label>Dimensión 1 (Producto)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10-BULK</fullName>
            </value>
            <value>
                <fullName>20-LNG</fullName>
            </value>
            <value>
                <fullName>30-AUTOGAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>