force-app/main/default/objects/Opportunity/fields/Estado_del_contrato_actual__c.field-meta.xml
<CustomField>
    <fullName>Estado_del_contrato_actual__c</fullName>
    <label>Estado del contrato actual</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Contrato en vigor</fullName>
            </value>
            <value>
                <fullName>Contrato finalizado</fullName>
            </value>
            <value>
                <fullName>Sin contrato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>