force-app/main/default/objects/Opportunity/fields/Estimaci_n_consumo_en_kilos__c.field-meta.xml
<CustomField>
    <fullName>Estimaci_n_consumo_en_kilos__c</fullName>
    <label>Estimación consumo en kilos</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>