force-app/main/default/objects/Opportunity/fields/Estimaci_n_consumo_en_Toneladas__c.field-meta.xml
<CustomField>
    <fullName>Estimaci_n_consumo_en_Toneladas__c</fullName>
    <formula>Estimaci_n_consumo_en_kilos__c /1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimación consumo en Toneladas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>