force-app/main/default/objects/Opportunity/fields/Euros_KG__c.field-meta.xml
<CustomField>
    <fullName>Euros_KG__c</fullName>
    <label>Euros / KG</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>