force-app/main/default/objects/Opportunity/fields/Fecha_aconsejada_de_re_activaci_n__c.field-meta.xml
<CustomField>
    <fullName>Fecha_aconsejada_de_re_activaci_n__c</fullName>
    <label>Fecha aconsejada de re-activación</label>
    <type>Date</type>
</CustomField>