force-app/main/default/objects/Opportunity/fields/Fecha_deteccion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_deteccion__c</fullName>
    <label>Fecha detección</label>
    <type>Date</type>
</CustomField>