force-app/main/default/objects/Opportunity/fields/Fecha_fin_contrato_actual__c.field-meta.xml
<CustomField>
    <fullName>Fecha_fin_contrato_actual__c</fullName>
    <label>Fecha fin contrato actual</label>
    <type>Date</type>
</CustomField>