force-app/main/default/objects/Opportunity/fields/Fecha_final__c.field-meta.xml
<CustomField>
    <fullName>Fecha_final__c</fullName>
    <label>Fecha final</label>
    <type>Date</type>
</CustomField>