force-app/main/default/objects/Opportunity/fields/Fecha_firma_docusing__c.field-meta.xml
<CustomField>
    <fullName>Fecha_firma_docusing__c</fullName>
    <description>Campo necesario para la integracion con docusign</description>
    <label>Fecha firma docusing</label>
    <type>Date</type>
</CustomField>