force-app/main/default/objects/Opportunity/fields/Fecha_ultima_modificacion_presupuestos__c.field-meta.xml
<CustomField>
    <fullName>Fecha_ultima_modificacion_presupuestos__c</fullName>
    <description>Campo que muestra la última modificación de los presupuestos asociados a la oportunidad, necesario para el workflow que cambia el estado a &quot;Caducada&quot; cuando han pasado 30 días sin que se hayan modificado los presupuestos.</description>
    <label>Fecha última modificación presupuestos</label>
    <type>DateTime</type>
</CustomField>