force-app/main/default/objects/Opportunity/fields/Fecha_validez__c.field-meta.xml
<CustomField>
    <fullName>Fecha_validez__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Solo para Spot</description>
    <label>Fecha validez</label>
    <type>Date</type>
</CustomField>