force-app/main/default/objects/Opportunity/fields/Ganado_por_competencia__c.field-meta.xml
<CustomField>
    <fullName>Ganado_por_competencia__c</fullName>
    <label>Ganado por competencia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Repsol</fullName>
            </value>
            <value>
                <fullName>Vitogas</fullName>
            </value>
            <value>
                <fullName>Cepsa</fullName>
            </value>
            <value>
                <fullName>Galp</fullName>
            </value>
            <value>
                <fullName>Unión Fenosa</fullName>
            </value>
            <value>
                <fullName>Gas Natural</fullName>
            </value>
            <value>
                <fullName>Ham</fullName>
            </value>
            <value>
                <fullName>Molgas</fullName>
            </value>
            <value>
                <fullName>Crisergas</fullName>
            </value>
            <value>
                <fullName>Endesa</fullName>
            </value>
            <value>
                <fullName>Primagas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>