force-app/main/default/objects/Opportunity/fields/Ganado_por_competidor__c.field-meta.xml
<CustomField>
    <fullName>Ganado_por_competidor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Este campo sustituye al campo &quot;Ganado por&quot; de tipo lista de selección. Se ha creado este campo ya que no se permite cambiar el tipo del campo de lista de selección a lookup.</description>
    <label>Ganado por</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Competidor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades (Ganado por)</relationshipLabel>
    <relationshipName>Oportunidades_ganadas</relationshipName>
    <type>Lookup</type>
</CustomField>