force-app/main/default/objects/Opportunity/fields/Ganador__c.field-meta.xml
<CustomField>
    <fullName>Ganador__c</fullName>
    <inlineHelpText>En el caso de no ganar esta oportunidad, indicar el Ganador si lo sabemos.</inlineHelpText>
    <label>Ganador</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cepsa</fullName>
            </value>
            <value>
                <fullName>Galp</fullName>
            </value>
            <value>
                <fullName>Gasindur</fullName>
            </value>
            <value>
                <fullName>Repsol</fullName>
            </value>
            <value>
                <fullName>Vitogas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>