force-app/main/default/objects/Opportunity/fields/Gr_resi_IVA_negocio_precio__c.field-meta.xml
<CustomField>
    <fullName>Gr_resi_IVA_negocio_precio__c</fullName>
    <label>Gr. resi. IVA negocio (precio)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>