force-app/main/default/objects/Opportunity/fields/IdNewSales__c.field-meta.xml
<CustomField>
    <fullName>IdNewSales__c</fullName>
    <description>Id empleado en la aplicación móvil New Sales. Empleado para relacionar las oportunidades y los presupuestos.</description>
    <externalId>true</externalId>
    <label>IdNewSales</label>
    <length>20</length>
    <type>Text</type>
</CustomField>