force-app/main/default/objects/Opportunity/fields/Importe_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Importe_oportunidad__c</fullName>
    <formula>Euros_KG__c * ( Toneladas__c *1000)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe oportunidad</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>