force-app/main/default/objects/Opportunity/fields/key_value__c.field-meta.xml
<CustomField>
    <fullName>key_value__c</fullName>
    <description>required by Thomas to sync</description>
    <label>key value</label>
    <length>30</length>
    <type>Text</type>
</CustomField>