force-app/main/default/objects/Opportunity/fields/Motivo_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Motivo_oportunidad__c</fullName>
    <label>Motivo oportunidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuevo</fullName>
                <default>true</default>
                <label>Nuevo</label>
            </value>
            <value>
                <fullName>Reneg - Ampliación</fullName>
            </value>
            <value>
                <fullName>Reneg - Cambio Condiciones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>