force-app/main/default/objects/Opportunity/fields/Motivo_p_rdida__c.field-meta.xml
<CustomField>
    <fullName>Motivo_p_rdida__c</fullName>
    <label>Motivo pérdida</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Disponibilidad</fullName>
            </value>
            <value>
                <fullName>Precio</fullName>
            </value>
            <value>
                <fullName>Molgas</fullName>
            </value>
            <value>
                <fullName>Crisergas</fullName>
            </value>
            <value>
                <fullName>Vitogas</fullName>
            </value>
            <value>
                <fullName>Endesa</fullName>
            </value>
            <value>
                <fullName>Hidrocantábrico</fullName>
            </value>
            <value>
                <fullName>Cepsa</fullName>
            </value>
            <value>
                <fullName>Gas Natural</fullName>
            </value>
            <value>
                <fullName>Unión Fenosa</fullName>
            </value>
            <value>
                <fullName>Cierre empresa</fullName>
            </value>
            <value>
                <fullName>Otras energías (pellets)</fullName>
            </value>
            <value>
                <fullName>Paro oferta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>