force-app/main/default/objects/Opportunity/fields/Motivos_de_P_rdida__c.field-meta.xml
<CustomField>
    <fullName>Motivos_de_P_rdida__c</fullName>
    <label>Motivos de Pérdida</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Canalizado GLP</fullName>
            </value>
            <value>
                <fullName>Causas técnico-legales</fullName>
            </value>
            <value>
                <fullName>Compromiso permanencia competencia</fullName>
            </value>
            <value>
                <fullName>Elige competencia (precio)</fullName>
            </value>
            <value>
                <fullName>Fuera zona Primagas</fullName>
            </value>
            <value>
                <fullName>Me lo estoy pensando</fullName>
            </value>
            <value>
                <fullName>Me quedo con mi energía actual (precio)</fullName>
            </value>
            <value>
                <fullName>No contesta</fullName>
            </value>
            <value>
                <fullName>No dispuesto a realizar inversión inicial</fullName>
            </value>
            <value>
                <fullName>No receptivo al cambio (negativo)</fullName>
            </value>
            <value>
                <fullName>Otra energía: biomasa</fullName>
            </value>
            <value>
                <fullName>Otra energía: electricidad</fullName>
            </value>
            <value>
                <fullName>Otra energía: gasóleo</fullName>
            </value>
            <value>
                <fullName>Otra energía: renovables</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Poco volumen</fullName>
            </value>
            <value>
                <fullName>Red de gas natural</fullName>
            </value>
            <value>
                <fullName>Riesgo alto de crédito</fullName>
            </value>
            <value>
                <fullName>Visita Técnica- No viable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>