force-app/main/default/objects/Opportunity/fields/Observaciones_P__c.field-meta.xml
<CustomField>
    <fullName>Observaciones_P__c</fullName>
    <label>Obser. Perdida</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>