force-app/main/default/objects/Opportunity/fields/OtherEnergy__c.field-meta.xml
<CustomField>
    <fullName>OtherEnergy__c</fullName>
    <label>Otras energías</label>
    <length>255</length>
    <type>Text</type>
</CustomField>