force-app/main/default/objects/Opportunity/fields/Permite_dto_factura__c.field-meta.xml
<CustomField>
    <fullName>Permite_dto_factura__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Permite dto. factura</label>
    <type>Checkbox</type>
</CustomField>