force-app/main/default/objects/Opportunity/fields/Permite_dto_l_nea__c.field-meta.xml
<CustomField>
    <fullName>Permite_dto_l_nea__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Permite dto. línea</label>
    <type>Checkbox</type>
</CustomField>