force-app/main/default/objects/Opportunity/fields/Prescriptor__c.field-meta.xml
<CustomField>
    <fullName>Prescriptor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescriptor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>