force-app/main/default/objects/Opportunity/fields/Price_Includes_VAT__c.field-meta.xml
<CustomField>
    <fullName>Price_Includes_VAT__c</fullName>
    <label>Price Includes VAT</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>