force-app/main/default/objects/Opportunity/fields/Procede_de_conversion__c.field-meta.xml
<CustomField>
    <fullName>Procede_de_conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Para saber si la oportunidad viene de una conversion de Lead</description>
    <label>Procede de conversion</label>
    <type>Checkbox</type>
</CustomField>