force-app/main/default/objects/Opportunity/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Producto</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GLP1</fullName>
                <default>true</default>
                <label>GLP1</label>
            </value>
            <value>
                <fullName>GLP2</fullName>
            </value>
            <value>
                <fullName>GLP3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>