force-app/main/default/objects/Opportunity/fields/Punto_de_carga__c.field-meta.xml
<CustomField>
    <fullName>Punto_de_carga__c</fullName>
    <label>Punto de carga</label>
    <length>50</length>
    <type>Text</type>
</CustomField>