force-app/main/default/objects/Opportunity/fields/Sales_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Code__c</fullName>
    <label>Sales_Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>